ggml/f4/b4de2077f11af4827e53170c8daa538331346e/ggml-100-m1/stdall
rm: /Users/ggml/results/ggml/f4/b4de2077f11af4827e53170c8daa538331346e/ggml-100-m1/*.log: No such file or directory
rm: /Users/ggml/results/ggml/f4/b4de2077f11af4827e53170c8daa538331346e/ggml-100-m1/*.exit: No such file or directory
rm: /Users/ggml/results/ggml/f4/b4de2077f11af4827e53170c8daa538331346e/ggml-100-m1/*.md: No such file or directory
Defaulting to user installation because normal site-packages is not writeable
Requirement already satisfied: accelerate==0.19.0 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from -r /Users/ggml/work/ggml/requirements.txt (line 1)) (0.19.0)
Requirement already satisfied: numpy==1.24.3 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from -r /Users/ggml/work/ggml/requirements.txt (line 2)) (1.24.3)
Requirement already satisfied: sentencepiece==0.1.98 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from -r /Users/ggml/work/ggml/requirements.txt (line 3)) (0.1.98)
Requirement already satisfied: torch==2.0.1 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from -r /Users/ggml/work/ggml/requirements.txt (line 4)) (2.0.1)
Requirement already satisfied: torchaudio==2.0.2 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from -r /Users/ggml/work/ggml/requirements.txt (line 5)) (2.0.2)
Requirement already satisfied: torchvision==0.15.2 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from -r /Users/ggml/work/ggml/requirements.txt (line 6)) (0.15.2)
Requirement already satisfied: transformers==4.29.2 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from -r /Users/ggml/work/ggml/requirements.txt (line 7)) (4.29.2)
Requirement already satisfied: gguf==0.4.5 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from -r /Users/ggml/work/ggml/requirements.txt (line 8)) (0.4.5)
Requirement already satisfied: psutil in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from accelerate==0.19.0->-r /Users/ggml/work/ggml/requirements.txt (line 1)) (5.9.5)
Requirement already satisfied: packaging>=20.0 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from accelerate==0.19.0->-r /Users/ggml/work/ggml/requirements.txt (line 1)) (23.2)
Requirement already satisfied: pyyaml in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from accelerate==0.19.0->-r /Users/ggml/work/ggml/requirements.txt (line 1)) (6.0.1)
Requirement already satisfied: typing-extensions in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from torch==2.0.1->-r /Users/ggml/work/ggml/requirements.txt (line 4)) (4.8.0)
Requirement already satisfied: jinja2 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from torch==2.0.1->-r /Users/ggml/work/ggml/requirements.txt (line 4)) (3.1.2)
Requirement already satisfied: networkx in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from torch==2.0.1->-r /Users/ggml/work/ggml/requirements.txt (line 4)) (3.1)
Requirement already satisfied: filelock in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from torch==2.0.1->-r /Users/ggml/work/ggml/requirements.txt (line 4)) (3.12.4)
Requirement already satisfied: sympy in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from torch==2.0.1->-r /Users/ggml/work/ggml/requirements.txt (line 4)) (1.12)
Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from torchvision==0.15.2->-r /Users/ggml/work/ggml/requirements.txt (line 6)) (10.0.1)
Requirement already satisfied: requests in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from torchvision==0.15.2->-r /Users/ggml/work/ggml/requirements.txt (line 6)) (2.31.0)
Requirement already satisfied: huggingface-hub<1.0,>=0.14.1 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from transformers==4.29.2->-r /Users/ggml/work/ggml/requirements.txt (line 7)) (0.18.0)
Requirement already satisfied: regex!=2019.12.17 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from transformers==4.29.2->-r /Users/ggml/work/ggml/requirements.txt (line 7)) (2023.10.3)
Requirement already satisfied: tqdm>=4.27 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from transformers==4.29.2->-r /Users/ggml/work/ggml/requirements.txt (line 7)) (4.66.1)
Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from transformers==4.29.2->-r /Users/ggml/work/ggml/requirements.txt (line 7)) (0.13.3)
Requirement already satisfied: fsspec>=2023.5.0 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from huggingface-hub<1.0,>=0.14.1->transformers==4.29.2->-r /Users/ggml/work/ggml/requirements.txt (line 7)) (2023.9.2)
Requirement already satisfied: MarkupSafe>=2.0 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from jinja2->torch==2.0.1->-r /Users/ggml/work/ggml/requirements.txt (line 4)) (2.1.3)
Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from requests->torchvision==0.15.2->-r /Users/ggml/work/ggml/requirements.txt (line 6)) (2.0.6)
Requirement already satisfied: charset-normalizer<4,>=2 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from requests->torchvision==0.15.2->-r /Users/ggml/work/ggml/requirements.txt (line 6)) (3.3.0)
Requirement already satisfied: certifi>=2017.4.17 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from requests->torchvision==0.15.2->-r /Users/ggml/work/ggml/requirements.txt (line 6)) (2023.7.22)
Requirement already satisfied: idna<4,>=2.5 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from requests->torchvision==0.15.2->-r /Users/ggml/work/ggml/requirements.txt (line 6)) (3.4)
Requirement already satisfied: mpmath>=0.19 in /Users/ggml/Library/Python/3.9/lib/python/site-packages (from sympy->torch==2.0.1->-r /Users/ggml/work/ggml/requirements.txt (line 4)) (1.3.0)
WARNING: You are using pip version 21.2.4; however, version 23.3.1 is available.
You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.
+ gg_run_ctest_debug
+ cd /Users/ggml/work/ggml
+ tee /Users/ggml/results/ggml/f4/b4de2077f11af4827e53170c8daa538331346e/ggml-100-m1/ctest_debug.log
+ rm -rf build-ci-debug
+ mkdir build-ci-debug
+ cd build-ci-debug
+ set -e
+ tee -a /Users/ggml/results/ggml/f4/b4de2077f11af4827e53170c8daa538331346e/ggml-100-m1/ctest_debug-cmake.log
+ cmake -DCMAKE_BUILD_TYPE=Debug -DGGML_METAL=ON ..
CMake Deprecation Warning at CMakeLists.txt:1 (cmake_minimum_required):
  Compatibility with CMake < 3.5 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value or use a ...<max> suffix to tell
  CMake that the project does not need compatibility with older versions.


-- The C compiler identification is AppleClang 14.0.3.14030022
-- The CXX compiler identification is AppleClang 14.0.3.14030022
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /Library/Developer/CommandLineTools/usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /Library/Developer/CommandLineTools/usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found Git: /usr/bin/git (found version "2.39.2 (Apple Git-143)") 
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- CMAKE_SYSTEM_PROCESSOR: arm64
-- ARM detected
-- Accelerate framework found
CMake Warning (dev) at src/CMakeLists.txt:400 (install):
  Target ggml has RESOURCE files but no RESOURCE DESTINATION.
This warning is for project developers.  Use -Wno-dev to suppress it.

-- ARM detected
-- Accelerate framework found
-- Configuring done (0.5s)
-- Generating done (0.1s)
-- Build files have been written to: /Users/ggml/work/ggml/build-ci-debug

real	0m0.614s
user	0m0.290s
sys	0m0.281s
+ tee -a /Users/ggml/results/ggml/f4/b4de2077f11af4827e53170c8daa538331346e/ggml-100-m1/ctest_debug-make.log
+ make -j
[  0%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  1%] Building C object src/CMakeFiles/ggml.dir/ggml-alloc.c.o
[  2%] Building C object src/CMakeFiles/ggml.dir/ggml-backend.c.o
[  3%] Building C object src/CMakeFiles/ggml.dir/ggml-metal.m.o
[  4%] Building C object src/CMakeFiles/ggml.dir/ggml.c.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml-quants.c.o
/Users/ggml/work/ggml/src/ggml-metal.m:2060:8: error: expected identifier or '('
extern "C" ggml_backend_t ggml_backend_reg_metal_init(const char * params, void * user_data) {
       ^
1 error generated.
make[2]: *** [src/CMakeFiles/ggml.dir/ggml-metal.m.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [src/CMakeFiles/ggml.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[  6%] Linking CXX static library libcommon.a
[  6%] Built target common
make: *** [all] Error 2
+ cur=2
+ echo 2
+ set +x
cat: /Users/ggml/results/ggml/f4/b4de2077f11af4827e53170c8daa538331346e/ggml-100-m1/ctest_debug-ctest.log: No such file or directory
